updated manifest file

--- a/src/app/shared/topnav/topnav.html
+++ b/src/app/shared/topnav/topnav.html
@@ -5,7 +5,7 @@
     </div>
     <a aria-label="Angular Material" class="docs-button mat-button" md-button="" [routerLink]="['']" [routerLinkActive]="['router-link-active']" aria-disabled="false" tabindex="0">
       <span class="mat-button-wrapper">
-        <span _ngcontent-c1="">Angular Material Seed</span>
+        <span _ngcontent-c1="">Angular Chrome Extension</span>
       </span>
       <div class="mat-button-ripple mat-ripple" mat-ripple=""></div>
       <div class="mat-button-focus-overlay"></div>
