--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -3,8 +3,8 @@
   width: 100%; float: left;
   .form{
     width: 400px;
-    padding: 50px;
-    margin: 88px auto;
+    padding: 20px 50px;
+    margin: 48px auto 10px;
     float: none;
     box-shadow: 0 0 5px $color-656;
     .mat-form-field{
