--- a/src/app/shared/topnav/topnav.html
+++ b/src/app/shared/topnav/topnav.html
@@ -10,14 +10,13 @@
       <div class="mat-button-ripple mat-ripple" mat-ripple=""></div>
       <div class="mat-button-focus-overlay"></div>
     </a>
-    <a class="docs-button mat-button" mat-button="" [routerLink]="['login']" [routerLinkActive]="['router-link-active']" aria-disabled="false" tabindex="0"><span class="mat-button-wrapper">Login</span>
+    <a class="docs-button mat-button login-btn" mat-button="" [routerLink]="['login']" [routerLinkActive]="['router-link-active']" aria-disabled="false" tabindex="0"><span class="mat-button-wrapper">Login</span>
       <div class="mat-button-ripple mat-ripple" mat-ripple=""></div>
       <div class="mat-button-focus-overlay"></div>
     </a>
     <a _ngcontent-c1="" aria-label="GitHub Repository" class="docs-button mat-button" target="_blank" href="https://github.com/habilelabs/angular-material-seed" mat-button="" aria-disabled="false" tabindex="0">
       <span class="mat-button-wrapper">
         <img _ngcontent-c1="" alt="GitHub" class="docs-github-logo" src="https://material.angular.io/assets/img/homepage/github-circle-white-transparent.svg">
-        GitHub
       </span>
       <div class="mat-button-ripple mat-ripple" mat-ripple=""></div>
       <div class="mat-button-focus-overlay"></div>
